Fixed collapsing elements and grouping by month

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,7 +39,7 @@
 	margin-left: 5px;
 }
 
-.list-group > li > a.active{
+.tours > li > a.active{
 	color: #24CCA9 !important;
 }
 
